--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -4,42 +4,42 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:text="@string/app_name"
-        android:textAlignment="center"
         android:textColor="@color/main_color"
         android:textSize="40sp"
         android:textStyle="bold" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/hour_of_24"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
         android:text="0개의 할 일이 남아있습니다."
-        android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/hour_of_24"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:text="24시간 남은 할 일이 0개 있습니다."
-        android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
         android:text="@string/famous_saying"
-        android:textAlignment="center"
         android:textColor="@color/main_color"
         android:textSize="19sp"
         android:textStyle="bold" />
