--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -40,6 +40,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp"
         android:text="@string/famous_saying"
+        android:textAlignment="center"
         android:textColor="@color/main_color"
         android:textSize="19sp"
         android:textStyle="bold" />
