--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -39,7 +39,7 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="9dp"
                 android:adjustViewBounds="true"
                 android:maxHeight="20dp"
                 android:src="@drawable/question_icon" />
