--- a/app/src/main/res/layout/activty_create.xml
+++ b/app/src/main/res/layout/activty_create.xml
@@ -22,20 +22,28 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp">
 
-        <Button
-            android:id="@+id/create_regular_btn"
+        <ToggleButton
+            android:id="@+id/create_toggle_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onClick"
-            android:text="반복" />
+            android:textOff="반복"
+            android:textOn="단번" />
 
-        <Button
-            android:id="@+id/create_once_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:onClick="onClick"
-            android:text="단번" />
+        <!--        <Button-->
+        <!--            android:id="@+id/create_regular_btn"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:onClick="onClick"-->
+        <!--            android:text="반복" />-->
+
+        <!--        <Button-->
+        <!--            android:id="@+id/create_once_btn"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginLeft="30dp"-->
+        <!--            android:onClick="onClick"-->
+        <!--            android:text="단번" />-->
 
     </LinearLayout>
 
@@ -59,6 +67,7 @@
             android:textStyle="bold" />
 
         <EditText
+            android:id="@+id/create_edittext"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -128,72 +137,78 @@
             android:layout_below="@id/linear3"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:weightSum="1">
+            android:weightSum="10">
 
-            <androidx.appcompat.widget.AppCompatButton
+            <ToggleButton
                 android:id="@+id/week_button0"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="0.1"
-                android:background="@drawable/shape_weekend_button"
-                android:text="일"
-                android:textColor="#FF0000"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:background="@drawable/selector_weekend_button"
+                android:textOff="일"
+                android:textOn="ON"
                 android:textSize="15sp" />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <ToggleButton
                 android:id="@+id/week_button1"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="0.1"
-                android:background="@drawable/shape_weekend_button"
-                android:text="월"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:background="@drawable/selector_weekend_button"
+                android:textOff="월"
+                android:textOn="월"
                 android:textSize="15sp" />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <ToggleButton
                 android:id="@+id/week_button2"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="0.1"
-                android:background="@drawable/shape_weekend_button"
-                android:text="화"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:background="@drawable/selector_weekend_button"
+                android:textOff="화"
+                android:textOn="화"
                 android:textSize="15sp" />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <ToggleButton
                 android:id="@+id/week_button3"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="0.1"
-                android:background="@drawable/shape_weekend_button"
-                android:text="수"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:background="@drawable/selector_weekend_button"
+                android:textOff="수"
+                android:textOn="수"
                 android:textSize="15sp" />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <ToggleButton
                 android:id="@+id/week_button4"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="0.1"
-                android:background="@drawable/shape_weekend_button"
-                android:text="목"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:background="@drawable/selector_weekend_button"
+                android:textOff="목"
+                android:textOn="목"
                 android:textSize="15sp" />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <ToggleButton
                 android:id="@+id/week_button5"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="0.1"
-                android:background="@drawable/shape_weekend_button"
-                android:text="금"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:background="@drawable/selector_weekend_button"
+                android:textOff="금"
+                android:textOn="금"
                 android:textSize="15sp" />
 
-            <androidx.appcompat.widget.AppCompatButton
+            <ToggleButton
                 android:id="@+id/week_button6"
                 android:layout_width="0dp"
-                android:layout_height="30dp"
-                android:layout_weight="0.1"
-                android:background="@drawable/shape_weekend_button"
-                android:text="토"
-                android:textColor="#0000FF"
+                android:layout_height="35dp"
+                android:layout_weight="1"
+                android:background="@drawable/selector_weekend_button"
+                android:textOff="토"
+                android:textOn="토"
                 android:textSize="15sp" />
+
 
         </LinearLayout>
 
