--- a/app/src/main/res/layout/activty_create.xml
+++ b/app/src/main/res/layout/activty_create.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/create_title"
+        android:id="@+id/penalty_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -14,44 +14,24 @@
         android:textSize="40sp"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:id="@+id/linear1"
+
+    <ToggleButton
+        android:id="@+id/create_toggle_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/create_title"
+        android:layout_below="@id/penalty_title"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:onClick="onClick"
+        android:textOff="반복"
+        android:textOn="단번" />
 
-        <ToggleButton
-            android:id="@+id/create_toggle_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:textOff="반복"
-            android:textOn="단번" />
-
-        <!--        <Button-->
-        <!--            android:id="@+id/create_regular_btn"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:onClick="onClick"-->
-        <!--            android:text="반복" />-->
-
-        <!--        <Button-->
-        <!--            android:id="@+id/create_once_btn"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_marginLeft="30dp"-->
-        <!--            android:onClick="onClick"-->
-        <!--            android:text="단번" />-->
-
-    </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linear2"
+        android:id="@+id/create_linear1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/linear1"
+        android:layout_below="@+id/create_toggle_btn"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:gravity="center"
@@ -83,13 +63,13 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/relative"
+        android:id="@+id/create_relative1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/linear2">
+        android:layout_below="@id/create_linear1">
 
         <LinearLayout
-            android:id="@+id/linear3"
+            android:id="@+id/create_linear2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -134,7 +114,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/linear3"
+            android:layout_below="@id/create_linear2"
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:weightSum="10">
@@ -217,8 +197,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@+id/relativelayout"
-        android:layout_below="@+id/relative"
+        android:layout_above="@+id/create_relative2"
+        android:layout_below="@+id/create_relative1"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_margin="20dp"
@@ -244,7 +224,7 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:id="@+id/relativelayout"
+        android:id="@+id/create_relative2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
