--- a/app/src/main/res/layout/activty_create.xml
+++ b/app/src/main/res/layout/activty_create.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -51,7 +52,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:layout_weight="0.5"
             android:background="@drawable/shape_setting_textview"
             android:hint="제목을 입력해주세요"
@@ -91,13 +92,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_weight="0.5"
                 android:background="@drawable/shape_setting_textview"
-                android:drawableRight="@drawable/layerlist_calendar"
                 android:onClick="onClick"
                 android:padding="10dp"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                app:drawableEndCompat="@drawable/layerlist_calendar" />
 
         </LinearLayout>
 
@@ -105,7 +106,7 @@
             android:id="@+id/create_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:rotation="90"
             android:thumb="@drawable/layerlist_create_thumb_switch"
@@ -215,10 +216,11 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:background="@drawable/shape_setting_textview"
             android:gravity="top"
             android:hint="내용을 입력해주세요(선택)"
+            android:inputType="none"
             android:padding="10dp" />
 
     </LinearLayout>
@@ -234,7 +236,7 @@
             android:id="@+id/create_back_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:onClick="onClick"
             android:text="뒤로가기" />
 
@@ -242,8 +244,8 @@
             android:id="@+id/create_next_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="20dp"
             android:onClick="onClick"
             android:text="다음" />
 
