--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -109,7 +109,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:rotation="90"
-            android:thumb="@drawable/layerlist_create_thumb_switch"
+            android:thumb="@drawable/shape_main_thumb_switch"
             android:track="@drawable/shape_create_track_switch" />
 
         <LinearLayout
@@ -230,24 +230,33 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal">
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/create_back_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:background="@drawable/main_button"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
             android:onClick="onClick"
-            android:text="뒤로가기" />
+            android:text="뒤로가기"
+            android:textColor="@color/back_ground_color" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/create_next_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="20dp"
+            android:background="@drawable/main_button"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
             android:onClick="onClick"
-            android:text="다음" />
+            android:text="다음"
+            android:textColor="@color/back_ground_color" />
 
     </RelativeLayout>
 
